--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
       <version>4.1.8.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jboss.slf4j</groupId>
+      <artifactId>slf4j-jboss-logmanager</artifactId>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
